--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -22,6 +22,7 @@
   --font-dark: #231b1b;
   --font-light: #ebfffa;
 
-  --bg-dark: #2e2323;
+  // --bg-dark: #2e2323;
+  --bg-dark: #312929;
   --bg-light: #f8f0fa;
 }
