--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -14,7 +14,7 @@
   --secondary-color-300: #c2fff0;
   --secondary-color-400: #99ffe6;
   --secondary-color-500: #adffeb;
-  --secondary-color-600: #85ffe0;
+  --secondary-color-600: #62ffd8;
 
   --secondary-color-transparent-200: #85ffe020;
   --secondary-color-transparent-500: #85ffe050;
@@ -24,5 +24,5 @@
 
   // --bg-dark: #2e2323;
   --bg-dark: #312929;
-  --bg-light: #f8f0fa;
+  --bg-light: #f1fffc;
 }
