update: added basic page transitions

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -38,3 +38,12 @@ h6 {
     background-color: var(--bg-dark);
   }
 }
+
+.page-enter-active,
+.page-leave-active {
+  transition: opacity 0.4s;
+}
+.page-enter,
+.page-leave-active {
+  opacity: 0;
+}
